--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
-</head>
+  <title>Ashley Burnett Professional Resume</title>
+  <link rel="stylesheet" href="style.css" />
+  </head>
 <body>
    <div>
       <h1>Ashley Burnett</h1>
