--- a/index.html
+++ b/index.html
@@ -3,67 +3,87 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Ashley Burnett Professional Resume</title>
+  <title>JS Bin</title>
   <link rel="stylesheet" href="style.css" />
-  </head>
+</head>
 <body>
    <div>
       <h1>Ashley Burnett</h1>
-      <p> Motivated, curious individual with a passion for technology
-   </div>  
+      <p> Motivated, curious individual with diverse interests and a passion for technology
+   </div>
+  
     <div class="experience-header">
       <h3>Work History</h3>
   </div>   
+  
   <div>
       <h4>Advantage Manufacturing of Colorado Springs</h4>
       <h5>Quality Manager</h5>
       <h6>May 2021 to October 2022</h6>
         <ul>
-          <li>Awesome information here!</li>
-          <li>Awesome information here!</li>
-          <li>Awesome information here!</li>
+          <li>Implemented new inspection technology including an optical comparator and a CMM</li>
+          <li>Manged a 7 member inspection and audit team</li>
+          <li>Successful completion of  AS9100 QMS audits in July of 2021 and June of 2022.</li>
         </Ul>
   </div>
-    <div>
+    
+  <div>
       <h4>LMI Aerospace</h4>
       <h5>Quality Engineer</h5>
       <h6>January 2018 to May 2021</h6>
         <ul>
-          <li>Awesome information here!</li>
-          <li>Awesome information here!</li>
-          <li>Awesome information here!</li>
+          <li>Successful completion of a total of 8 AS9100 QMS audits across 3 LMI facilities</li>
+          <li>Successful completion of 6 NADCAP audits including an 4 awards of 18 month merit for chemical processing and NDT and 1 award of 24 month merit of NDT</li>
+          <li>Supervised and provided support for a 20 member inspection team divied across 4 shifts and 3 facilities.</li>
         </Ul>
   </div>
+  
   <div>
       <h4>JoCo Assembly</h4>
       <h5>Quality Manager</h5>
       <h6>January 2015 to Novermber 2017</h6>
         <ul>
-          <li>Awesome information here!</li>
-          <li>Awesome information here!</li>
-          <li>Awesome information here!</li>
+          <li>Conducted daily MRB meetings with JoCo's primary customer Navistar/International Harvester</li>
+          <li>Successful completion of 3 ISO:TS audits</li>
+          <li>Managed an inspection team of 12 members including 2 employees embedded at point of install at customer assembly plant</li>
         </Ul>
    </div>
-    <div class="Education-header">
+  
+  <div>
+      <h4>Sunland Pipeline Construction Rocky Mountain Division</h4>
+      <h5>Bending Engineer/Tie-in foreman</h5>
+      <h6>May 2007 to November 2014</h6>
+        <ul>
+          <li>Supervised bending and tie in crews of up to 35 members including laborers, welders, inspectors, and heavy equipment operators</li>
+          <li>Held jont daily saftey and enviromental health meetings with gas company representatives</li>
+          <li>Completed complex large diamater pipeline construction projects on difficult mountain terrain in Trinidad, Rio Blanco, and Longmont Colorad as well as Bull Mountain and Gillette Wyoming.</li>
+          <li>Managed difficult urban gasline renewal projects in Boston, Massachutes, Salt Lake City, Utah, and Queens, New York in cooperation with Union, EPA, City, and gas company officals. 
+         </Ul>
+   
+  </div>
+    
+  <div class="Education-header">
       <h3>Education</h3>
     </div>
   <div>
       <h4>Northeastern State University</h4>
       <h5> BA History</h5>
-      <h6>August 2000 to December 2008</h6>
+      <h6>August 2000 to May 2007</h6>
         <ul>
-          <li>Awesome information here!</li>
-          <li>Awesome information here!</li>
-          <li>Awesome information here!</li>
+          <li>Member of NSU Jazz Band and Jazz Combo 2000-2004</li>
+          <li>Member of college rifle team 2004-2005</li>
+          <li>Directed a student production of Camelot in 2003</li>
         </Ul>
-   </div>
-        <h4>Oologah-Talala High School</h4>
+  </div>
+ 
+  <div>
+      <h4>Oologah-Talala High School</h4>
       <h5> HS Diploma</h5>
       <h6>August 1996 to May 2000</h6>
         <ul>
-          <li>Awesome information here!</li>
-          <li>Awesome information here!</li>
-          <li>Awesome information here!</li>
+          <li>Numerous marching and Jazz band awards 1996-2000</li>
+          <li>Drama 1999-2000</li>
+          <li>4th place state tennis tournament 1999</li>
         </Ul>
    </div>
   </body>
