--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>Ashley Burnett Resume</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
    <div>
       <h1>Ashley Burnett</h1>
-      <p> Motivated, curious individual with diverse interests and a passion for technology
-   </div>
-  
-    <div class="experience-header">
-      <h3>Work History</h3>
+      <p> Highly motivated, curious individual with diverse interests and a passion for technology
+  </div>
+     
+  <div>
+    <img src="https://www.bu.edu/rims/files/2009/10/iStock_000000244750Small.jpg"/>
+  <h3>Work History</h3>
   </div>   
-  
+ 
   <div>
       <h4>Advantage Manufacturing of Colorado Springs</h4>
       <h5>Quality Manager</h5>
@@ -26,8 +27,7 @@
           <li>Successful completion of  AS9100 QMS audits in July of 2021 and June of 2022.</li>
         </Ul>
   </div>
-    
-  <div>
+    <div>
       <h4>LMI Aerospace</h4>
       <h5>Quality Engineer</h5>
       <h6>January 2018 to May 2021</h6>
@@ -37,7 +37,6 @@
           <li>Supervised and provided support for a 20 member inspection team divied across 4 shifts and 3 facilities.</li>
         </Ul>
   </div>
-  
   <div>
       <h4>JoCo Assembly</h4>
       <h5>Quality Manager</h5>
@@ -74,10 +73,8 @@
           <li>Member of college rifle team 2004-2005</li>
           <li>Directed a student production of Camelot in 2003</li>
         </Ul>
-  </div>
- 
-  <div>
-      <h4>Oologah-Talala High School</h4>
+   </div>
+        <h4>Oologah-Talala High School</h4>
       <h5> HS Diploma</h5>
       <h6>August 1996 to May 2000</h6>
         <ul>
