--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
    <div>
       <h1>Ashley Burnett</h1>
-      <p> Highly motivated, curious individual with diverse interests and a passion for technology
-  </div>
+      <p> Highly motivated, curious individual with diverse interets, proven leadership experience, and a passion for technology.
      
-  <div>
     <img src="https://www.bu.edu/rims/files/2009/10/iStock_000000244750Small.jpg"/>
-  <h3>Work History</h3>
+  </div>
+  <div class="experience-header">
+    <h3>Work History</h3>
   </div>   
  
   <div>
