--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
    <div>
       <h1>Ashley Burnett</h1>
-      <p> Highly motivated, curious individual with diverse interets, proven leadership experience, and a passion for technology.
-     
+      <p> Highly motivated, curious individual with diverse interests, proven leadership experience, and a passion for technology.
+  </div>
+  <div>
     <img src="https://www.bu.edu/rims/files/2009/10/iStock_000000244750Small.jpg"/>
   </div>
+  
   <div class="experience-header">
     <h3>Work History</h3>
   </div>   
@@ -24,7 +26,7 @@
         <ul>
           <li>Implemented new inspection technology including an optical comparator and a CMM</li>
           <li>Manged a 7 member inspection and audit team</li>
-          <li>Successful completion of  AS9100 QMS audits in July of 2021 and June of 2022.</li>
+          <li>Successful completion of  AS9100 QMS audits in July of 2021 and June of 2022</li>
         </Ul>
   </div>
     <div>
@@ -34,7 +36,7 @@
         <ul>
           <li>Successful completion of a total of 8 AS9100 QMS audits across 3 LMI facilities</li>
           <li>Successful completion of 6 NADCAP audits including an 4 awards of 18 month merit for chemical processing and NDT and 1 award of 24 month merit of NDT</li>
-          <li>Supervised and provided support for a 20 member inspection team divied across 4 shifts and 3 facilities.</li>
+          <li>Supervised and provided support for a 20 member inspection team divied across 4 shifts and 3 facilities</li>
         </Ul>
   </div>
   <div>
@@ -55,8 +57,8 @@
         <ul>
           <li>Supervised bending and tie in crews of up to 35 members including laborers, welders, inspectors, and heavy equipment operators</li>
           <li>Held jont daily saftey and enviromental health meetings with gas company representatives</li>
-          <li>Completed complex large diamater pipeline construction projects on difficult mountain terrain in Trinidad, Rio Blanco, and Longmont Colorad as well as Bull Mountain and Gillette Wyoming.</li>
-          <li>Managed difficult urban gasline renewal projects in Boston, Massachutes, Salt Lake City, Utah, and Queens, New York in cooperation with Union, EPA, City, and gas company officals. 
+          <li>Completed complex large diamater pipeline construction projects on difficult mountain terrain in Trinidad, Rio Blanco, and Longmont Colorad as well as Bull Mountain and Gillette Wyoming</li>
+          <li>Managed difficult urban gasline renewal projects in Boston, Massachutes, Salt Lake City, Utah, and Queens, New York in cooperation with Union, EPA, city, and gas company officals</li> 
          </Ul>
    
   </div>
