--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       <h1>Ashley Burnett</h1>
       <p> Highly motivated, curious individual with diverse interests, proven leadership experience, and a passion for technology.
   </div>
-  <div>
+  <figure>
     <img src="https://www.bu.edu/rims/files/2009/10/iStock_000000244750Small.jpg"/>
-  </div>
+    <figcaption>Fig1. - Pink Coding Image </figcaption>
+  </figure>
   
   <div class="experience-header">
     <h3>Work History</h3>
