--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h6>May 2007 to November 2014</h6>
         <ul>
           <li>Supervised bending and tie in crews of up to 35 members including laborers, welders, inspectors, and heavy equipment operators</li>
-          <li>Held jont daily saftey and enviromental health meetings with gas company representatives</li>
+          <li>Held jont daily safety and enviromental health meetings with gas company representatives</li>
           <li>Completed complex large diamater pipeline construction projects on difficult mountain terrain in Trinidad, Rio Blanco, and Longmont Colorad as well as Bull Mountain and Gillette Wyoming</li>
           <li>Managed difficult urban gasline renewal projects in Boston, Massachutes, Salt Lake City, Utah, and Queens, New York in cooperation with Union, EPA, city, and gas company officals</li> 
          </Ul>
