--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
     <h3>Work History</h3>
   </div>   
  
+   <div>
+      <h4>Los Alamos National Lab - Triad National Security</h4>
+      <h5>Quality Product Verifier</h5>
+      <h6>April 2024 to Present</h6>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </Ul>
+  </div>
+  
   <div>
       <h4>Advantage Manufacturing of Colorado Springs</h4>
       <h5>Quality Manager</h5>
